--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jsqr": "^1.4.0",
     "lucide-react": "^0.180.0",
     "next": "13.3.1",
+    "next-pwa": "^5.6.0",
     "next-qrcode": "^2.4.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
