--- a/app/package.json
+++ b/app/package.json
@@ -17,11 +17,6 @@
     "@radix-ui/react-select": "^1.2.1",
     "@radix-ui/react-tabs": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.3",
-    "@supabase/auth-helpers-nextjs": "^0.6.1",
-    "@supabase/auth-helpers-react": "^0.3.1",
-    "@supabase/auth-ui-react": "^0.3.5",
-    "@supabase/auth-ui-shared": "^0.1.3",
-    "@supabase/supabase-js": "^2.21.0",
     "@tanstack/react-query": "^4.29.5",
     "@trpc/client": "^10.21.1",
     "@trpc/react-query": "^10.21.1",
@@ -46,6 +41,7 @@
     "react": "18.2.0",
     "react-day-picker": "^8.7.1",
     "react-dom": "18.2.0",
+    "server-only": "^0.0.1",
     "superjson": "^1.12.3",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.1",
