--- a/.gitignore
+++ b/.gitignore
@@ -35,8 +35,8 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-./app/public/sw.js*
-./app/public/workbox-*.js*
+./public/sw.js*
+./public/workbox-*.js*
 
 # firebaseの秘密鍵
 firebase-adminsdk.json
