--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "encoding": "^0.1.13",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "firebase": "^9.21.0",
     "jotai": "^2.0.4",
     "jsqr": "^1.4.0",
     "lucide-react": "^0.180.0",
     "next": "13.3.1",
+    "next-auth": "^4.22.1",
     "next-pwa": "^5.6.0",
     "next-qrcode": "^2.4.1",
     "postcss": "8.4.23",
