--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "firebase": "^9.21.0",
+    "firebase-admin": "^11.7.0",
     "jotai": "^2.0.4",
     "jsqr": "^1.4.0",
     "lucide-react": "^0.180.0",
