--- a/.gitignore
+++ b/.gitignore
@@ -35,8 +35,10 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-./public/sw.js*
-./public/workbox-*.js*
+**/public/workbox-*.js
+**/public/sw.js
+**/public/sw.js.map
+**/public/worker-*.js
 
 # firebaseの秘密鍵
 firebase-adminsdk.json
