--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:proxy": "next dev -p 3001 & local-ssl-proxy --key localhost-key.pem --cert localhost.pem --source 3000 --target 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -35,6 +36,7 @@
     "firebase-admin": "^11.7.0",
     "jotai": "^2.0.4",
     "jsqr": "^1.4.0",
+    "localforage": "^1.10.0",
     "lucide-react": "^0.180.0",
     "next": "13.3.1",
     "next-auth": "^4.22.1",
@@ -58,6 +60,7 @@
   },
   "devDependencies": {
     "@types/uuid": "^9.0.1",
+    "local-ssl-proxy": "^2.0.5",
     "prisma": "^4.13.0"
   }
 }
