--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.1",
     "tailwindcss-animate": "^1.0.5",
+    "ts-pattern": "^4.2.2",
     "typescript": "5.0.4",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
