--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@prisma/client": "4.13.0",
+    "@radix-ui/react-avatar": "^1.0.2",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-label": "^2.0.1",
     "@radix-ui/react-popover": "^1.0.5",
@@ -39,10 +40,11 @@
     "jsqr": "^1.4.0",
     "localforage": "^1.10.0",
     "lucide-react": "^0.180.0",
-    "next": "13.3.1",
+    "next": "13.4.0",
     "next-auth": "^4.22.1",
     "next-pwa": "^5.6.0",
     "next-qrcode": "^2.4.1",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-day-picker": "^8.7.1",
@@ -54,6 +56,7 @@
     "tailwindcss-animate": "^1.0.5",
     "ts-pattern": "^4.2.2",
     "typescript": "5.0.4",
+    "use-file-upload": "^1.0.11",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
   },
