--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react": "18.2.0",
     "react-day-picker": "^8.7.1",
     "react-dom": "18.2.0",
+    "react-transition-group": "^4.4.5",
     "server-only": "^0.0.1",
     "superjson": "^1.12.3",
     "tailwind-merge": "^1.12.0",
@@ -64,6 +65,7 @@
     "node": "18.16.0"
   },
   "devDependencies": {
+    "@types/react-transition-group": "^4.4.6",
     "@types/uuid": "^9.0.1",
     "local-ssl-proxy": "^2.0.5",
     "prisma": "^4.13.0"
