--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,12 +1,12 @@
 {
-  "theme_color": "#f69435",
-  "background_color": "#f69435",
+  "theme_color": "#000000",
+  "background_color": "#000000",
   "display": "fullscreen",
   "scope": "/",
   "start_url": "/",
-  "name": "ticketer",
-  "short_name": "ticketer",
-  "description": "\u30c1\u30b1\u30c3\u30c8\u767a\u884c\u30a2\u30d7\u30ea\u3067\u3059",
+  "name": "Katacky",
+  "short_name": "Katacky",
+  "description": "オリジナルチケットを発行して使用したり、他の人に渡すことができるアプリです",
   "icons": [
     {
       "src": "/icon-192x192.png",
