--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "@radix-ui/react-tabs": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.3",
     "@tanstack/react-query": "^4.29.5",
-    "@trpc/client": "^10.21.1",
-    "@trpc/react-query": "^10.21.1",
-    "@trpc/server": "^10.21.1",
+    "@trpc/client": "^10.25.0",
+    "@trpc/next": "^10.25.0",
+    "@trpc/react-query": "^10.25.0",
+    "@trpc/server": "^10.25.0",
     "@types/node": "18.16.0",
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
@@ -57,7 +58,6 @@
     "tailwindcss-animate": "^1.0.5",
     "ts-pattern": "^4.2.2",
     "typescript": "5.0.4",
-    "use-file-upload": "^1.0.11",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
   },
