--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-switch": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.3",
+    "@tanstack/query-core": "^4.29.5",
     "@tanstack/react-query": "^4.29.5",
     "@trpc/client": "^10.25.0",
     "@trpc/next": "^10.25.0",
@@ -28,6 +29,7 @@
     "@types/node": "18.16.0",
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
+    "async_hooks": "^1.0.0",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.5.3",
     "clsx": "^1.2.1",
