--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.0",
     "@prisma/client": "4.13.0",
     "@radix-ui/react-avatar": "^1.0.2",
     "@radix-ui/react-dialog": "^1.0.3",
@@ -22,10 +23,6 @@
     "@radix-ui/react-toast": "^1.1.3",
     "@tanstack/query-core": "^4.29.5",
     "@tanstack/react-query": "^4.29.5",
-    "@trpc/client": "^10.25.0",
-    "@trpc/next": "^10.25.0",
-    "@trpc/react-query": "^10.25.0",
-    "@trpc/server": "^10.25.0",
     "@types/node": "18.16.0",
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
@@ -41,9 +38,10 @@
     "firebase-admin": "^11.7.0",
     "jotai": "^2.0.4",
     "jsqr": "^1.4.0",
+    "jwt-decode": "^3.1.2",
     "localforage": "^1.10.0",
     "lucide-react": "^0.180.0",
-    "next": "13.4.0",
+    "next": "13.4.5-canary.0",
     "next-auth": "^4.22.1",
     "next-pwa": "^5.6.0",
     "next-qrcode": "^2.4.1",
@@ -52,6 +50,7 @@
     "react": "18.2.0",
     "react-day-picker": "^8.7.1",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.0",
     "react-transition-group": "^4.4.5",
     "server-only": "^0.0.1",
     "superjson": "^1.12.3",
