--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
     "app/next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "src/lib/client/serverActionHandlerts"
   ],
   "exclude": ["node_modules"]
 }
