--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@corbado/webcomponent": "^1.0.74",
     "@hookform/resolvers": "^3.1.0",
     "@prisma/client": "4.13.0",
     "@radix-ui/react-avatar": "^1.0.2",
@@ -41,7 +42,7 @@
     "jwt-decode": "^3.1.2",
     "localforage": "^1.10.0",
     "lucide-react": "^0.180.0",
-    "next": "13.4.5-canary.0",
+    "next": "14.0.1",
     "next-auth": "^4.22.1",
     "next-pwa": "^5.6.0",
     "next-qrcode": "^2.4.1",
