--- a/package.json
+++ b/package.json
@@ -24,8 +24,6 @@
     "@tanstack/query-core": "^4.29.5",
     "@tanstack/react-query": "^4.29.5",
     "@types/node": "18.16.0",
-    "@types/react": "18.0.38",
-    "@types/react-dom": "18.0.11",
     "async_hooks": "^1.0.0",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.5.3",
@@ -59,7 +57,6 @@
     "tailwindcss": "3.3.1",
     "tailwindcss-animate": "^1.0.5",
     "ts-pattern": "^4.2.2",
-    "typescript": "5.0.4",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
   },
@@ -67,10 +64,13 @@
     "node": "18.16.0"
   },
   "devDependencies": {
+    "@types/react": "18.2.38",
+    "@types/react-dom": "18.2.17",
     "@types/react-transition-group": "^4.4.6",
     "@types/uuid": "^9.0.1",
     "local-ssl-proxy": "^2.0.5",
     "prisma": "^4.13.0",
-    "prisma-erd-generator": "^1.6.0"
+    "prisma-erd-generator": "^1.6.0",
+    "typescript": "5.3.2"
   }
 }
